--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,10 +8,19 @@ html , body {
 }
 
 .bg-nav {
-    background-color:rgb(0, 7, 31) !important;
+    // background-color:rgb(0, 145, 208,0.1) !important;
+    // background-color : #0091d0 !important;
+    background-color : #fff !important;
+}
+.btn-bg {
+    background-color : #0091d0  !important;
+    color : #fff !important;
+}
+.bg-footer {
+    background-color : rgb(0, 145, 208,0.9) !important;
 }
 .menu-link {
-    color : #fff !important;
+    color : #000 !important;
     font-family : 'Roboto Slab', arial !important;
 }
 
@@ -51,6 +60,7 @@ html , body {
     right : 0;
     margin-right : 2rem ;
     margin-bottom : 2rem ;
+    background-color : rgba(0,0,0,0.6) !important;
 }
 
 .contact-form {
@@ -66,7 +76,7 @@ html , body {
 
 .to-top-btn {
     position : fixed;
-    bottom : 1rem ;
+    bottom : 5rem ;
     right : 0 ;
     margin : 1rem;
     border-radius : 1rem !important;
